--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,9 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
-        android:text="REGISTRAR INSPECCIÓN"
+        android:fontFamily="sans-serif-black"
+        android:text="Registrar Inspección"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,110 +23,140 @@
 
 
     <EditText
-        android:id="@+id/editTextPatent"
+        android:id="@+id/txt_patente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:hint="Patente"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/spinnerBrands"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />
 
     <Spinner
-        android:id="@+id/spinnerBrands"
-        android:layout_width="333dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:prompt="@string/brand_prompt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/spinnerColors"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPatent" />
-
-    <Spinner
-        android:id="@+id/spinnerColors"
+        android:id="@+id/sp_marca"
         android:layout_width="330dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
-        android:prompt="@string/color_prompt"
+        android:minHeight="39dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/editTextDate"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerBrands" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_patente" />
+
+    <Spinner
+        android:id="@+id/sp_colores"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:minHeight="39dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sp_marca" />
 
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/txt_date"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:hint="Fecha (dd/mm/aaaa)"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/editTextMileage"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerColors" />
-
-    <EditText
-        android:id="@+id/editTextMileage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="40dp"
-        android:hint="Kilometraje"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/checkBoxService"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
-
-    <CheckBox
-        android:id="@+id/checkBoxService"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
-        android:text="Servicio"
+        android:layout_marginEnd="40dp"
+        android:hint="Fecha (dd/mm/aaaa)"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextMileage" />
-
-    <CheckBox
-        android:id="@+id/checkBoxMaintenance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Mantención"
-        app:layout_constraintStart_toStartOf="@+id/checkBoxService"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxService" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_colores" />
 
     <EditText
-        android:id="@+id/editTextClientRut"
+        android:id="@+id/txt_kilometraje"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:hint="Kilometraje"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_date" />
+
+    <RadioGroup
+        android:id="@+id/rg_motivo"
+        android:layout_width="120dp"
+        android:layout_height="109dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_kilometraje">
+
+        <RadioButton
+            android:id="@+id/rb_servicio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Servicio"
+            tools:layout_editor_absoluteX="75dp"
+            tools:layout_editor_absoluteY="587dp" />
+
+        <RadioButton
+            android:id="@+id/rb_mantencion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mantención"
+            tools:layout_editor_absoluteX="262dp"
+            tools:layout_editor_absoluteY="563dp" />
+
+    </RadioGroup>
+
+    <EditText
+        android:id="@+id/txt_rut"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:hint="Rut del cliente"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/checkBoxMaintenance"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxMaintenance" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rg_motivo" />
 
     <EditText
-        android:id="@+id/editTextClientName"
+        android:id="@+id/txt_nombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:hint="Nombre del cliente"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/editTextClientRut"
-        app:layout_constraintTop_toBottomOf="@+id/editTextClientRut" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_rut" />
 
     <Button
-        android:id="@+id/buttonSubmit"
+        android:id="@+id/btn_registarInspeccion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="40dp"
-        android:text="Registrar"
+        android:fontFamily="sans-serif-black"
+        android:text="REGISTRAR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/editTextClientName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextClientName" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
